--- a/index.html.save.4
+++ b/index.html.save.4
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Eric Lu's Website</title>
-<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="index.css">
   </head>
   <body>
 	<div id="background">
@@ -12,15 +12,12 @@
 		<div id="mainpart">
 			<div id= "sidebar">
 				<div id= "imageplace">
-					<img src= "https://dw3jhbqsbya58.cloudfront.net/rosters/f4c15b6a-39e9-4e36-9072-40f5d3ec5bb7/1/c/e/1ce321f2-b52f-e911-80cd-8a0e844f09b2/thumbnail.jpg?version=636863546047031195" width= "200" height= "300" id="myphoto">
+					<img src= "https://ss7.vzw.com/is/image/VerizonWireless/iphone7-plus-front-matblk?$device-lg$" id="myphoto">
 				</div>
 			</div>
 			<div id= "page">
 				<p>My name is Eric Lu and my CS alias is 'elusive'. I like CCA, my classes, and all of my gamer friends. I also play baseball and surf the internet in my free time.
 				<p>This is the link to view my <a href= "linuxcommands.html">Linux Commands</a><p>
-				<p> This is the link to view my rpi <a href="/cgi-bin/sp1a/pistatus.cgi">status</a>
-                                <p>Rpi is alive script: <a href="/cgi-bin/sp1a/rpi2.cgi">rpistatus</a></p>
-				<p>Area of Circle script: <a href="/cgi-bin/sp1a/forminput2.php">PHP</a></p>
 			</div>
 		</div>
 	</div>
