--- a/index.html.save.6
+++ b/index.html.save.6
@@ -19,8 +19,7 @@
 				<p>My name is Eric Lu and my CS alias is 'elusive'. I like CCA, my classes, and all of my gamer friends. I also play baseball and surf the internet in my free time.
 				<p>This is the link to view my <a href= "linuxcommands.html">Linux Commands</a><p>
 				<p> This is the link to view my rpi <a href="/cgi-bin/sp1a/pistatus.cgi">status</a>
-                                <p>Rpi is alive script: <a href="/cgi-bin/sp1a/rpi2.cgi">rpistatus</a></p>
-				<p>Area of Circle script: <a href="/cgi-bin/sp1a/forminput2.php">PHP</a></p>
+				<p>View my 
 			</div>
 		</div>
 	</div>
